--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ ul.list-unstyled strong {
 /* Img Cards */
 .image-container {
   height: 250px; 
+  width: 260px;
   background-color: rgba(0, 0, 0, 0.555);
   border-radius: 5px;
   padding: 10px;
@@ -227,9 +228,8 @@ ul.list-unstyled strong {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
   align-items: center;
-  justify-content: center;
+  margin:0 auto;
   
-
 }
 
 .image-container img {
@@ -237,6 +237,8 @@ ul.list-unstyled strong {
   max-width: 100%;
   object-fit: contain;
   border-radius: 8px;
+  margin:0 auto;
+  
 }
 
 .card-pedro .main-card {
